force-app/main/default/objects/sugati__Payment_Method__c/sugati__Payment_Method__c.object-meta.xml
<CustomObject>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>