force-app/main/default/objects/sugati__Payment_Method__c/fields/sugati__Card_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Card_Type__c</fullName>
    <label>Card Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>