force-app/main/default/objects/sugati__Payment_Method__c/fields/sugati__PM_Brand__c.field-meta.xml
<CustomField>
    <fullName>sugati__PM_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>sugati__Brand__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>