force-app/main/default/objects/sugati__Payment_Method__c/fields/sugati__PM_Credit_Card_Charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__PM_Credit_Card_Charges__c</fullName>
    <label>Credit Card Charges %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>