force-app/main/default/objects/sugati__Payment_Method__c/fields/sugati__PM_Default__c.field-meta.xml
<CustomField>
    <fullName>sugati__PM_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>