force-app/main/default/objects/sugati__Payment_Method__c/fields/sugati__PM_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__PM_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>