force-app/main/default/objects/sugati__Payment_Method__c/fields/sugati__PM_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__PM_Record_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Record Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Record_Type__c.sugati__RT_SObject_Type__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Record_Type__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>