force-app/main/default/objects/sugati__Payment_Method__c/fields/sugati__S_PM_Show_on_Onboarding_Form__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PM_Show_on_Onboarding_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Onboarding Form</label>
    <type>Checkbox</type>
</CustomField>