force-app/main/default/objects/sugati__Payment_Method__c/recordTypes/sugati__Cheques_Notes.recordType-meta.xml
<RecordType>
    <fullName>sugati__Cheques_Notes</fullName>
    <active>true</active>
    <label>Cheques Notes</label>
</RecordType>