force-app/main/default/objects/sugati__Payment_Method__c/recordTypes/sugati__Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>sugati__Credit_Card</fullName>
    <active>true</active>
    <description>Used for defining the credit card charges</description>
    <label>Credit Card</label>
</RecordType>