force-app/main/default/objects/sugati__Payment_Method__c/recordTypes/sugati__Footer.recordType-meta.xml
<RecordType>
    <fullName>sugati__Footer</fullName>
    <active>true</active>
    <label>Footer</label>
</RecordType>