force-app/main/default/objects/sugati__Payment_Method__c/recordTypes/sugati__Important_Notes.recordType-meta.xml
<RecordType>
    <fullName>sugati__Important_Notes</fullName>
    <active>true</active>
    <label>Important Notes</label>
</RecordType>