force-app/main/default/objects/sugati__Payment_Method__c/recordTypes/sugati__Payment_Method.recordType-meta.xml
<RecordType>
    <fullName>sugati__Payment_Method</fullName>
    <active>true</active>
    <label>Payment Method</label>
</RecordType>