force-app/main/default/objects/sugati__Payment_Method__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__PM_Record_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>